# CPnP-cpp-version

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake.in
include/pnp/: cpnp.h  ops.h
src/: cpnp.cpp
test/: test_pnp.cpp
